# serde-yaml

./: Cargo.toml  README.md
src/: de.rs  error.rs  lib.rs  mapping.rs  number.rs  ser.rs  with.rs
src/value/: de.rs  mod.rs  ser.rs  tagged.rs
tests/: test_de.rs  test_error.rs  test_serde.rs
